# Mgoty

./: .gitignore  CMakeLists.txt  README.md  first.cpp  fiveth.cpp  main.cpp  second.cpp  third.cpp
fourth/: fourth.py  w.txt
include/: lab.h
src/: array.cpp  books.cpp  main.cpp  second.cpp  string.cpp
src/fourth/: fourth.py
src/include/: lab.h
